pod-sp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-pod
spec:
  volumes:
    - name: nfs-volume
      persistentVolumeClaim:
        claimName: nfs-pvc-test
  containers:
    - name: nfs-container
      image: busybox:latest
      command: ["/bin/sh", "-c", "while true; do echo $(date) >> /nfs/data.log; sleep 10; done"]
      volumeMounts:
        - name: nfs-volume
          mountPath: /nfs
